update WZWSParser.java